[package]
name = "lockbox"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "lockbox"
path = "src/cli/main.rs"

[dependencies]
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.7", features = ["cargo"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
sha2 = "0.10.8"
uuid = { version = "1.9.1", features = ["v4", "fast-rng"] }
lazy_static = "1.5.0"
rust-argon2 = "2.1.0"
toml = "0.8.19"
log = "0.4.25"