[package]
name = "databoxer"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "databoxer"
path = "src/cli/main.rs"

[dependencies]
# cli
clap = { version = "4.5.26", features = ["cargo"] }

# serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
bincode = "1.3.3"
toml = "0.8.19"

# encryption
chacha20poly1305 = "0.10.1"
rand = "0.9.0"
sha2 = "0.10.8"
argon2 = "0.5.3"

# utility
uuid = { version = "1.12.0", features = ["v4", "fast-rng"] }
lazy_static = "1.5.0"
paste = "1.0.15"
chrono = "0.4.39"
